gobotany/static/gobotany.css
/* Go-Botany site styles */

body {
    padding: 24px;
}

h1 {
    font-size: 1.8em;
    font-weight: normal;
    margin: 6px 0;
    padding: 6px 0;
}


h2 {
    font-size: 1em;
    font-weight: normal;
    margin: 5px 0;
}

p {
    margin: 5px 0;
    padding: 5px 0;
}

.species_image_ribbon {
    margin: 8px auto;
    background-color: #c3d69b;
    padding: 8px;
    text-align: center;
}
.species_image_ribbon div {
    display: inline;
}
.species_image_ribbon img {
    cursor: pointer;
    vertical-align: middle;
}

#content {
    width: 960px;
}

#main {
    border: 1px dashed #ddd;
    float: right;
    margin: 0 0 1em;
    width: 750px;
}

#filters, #help #nav {
    border: 1px dashed #ccc;
    float: left;
    min-height: 150px;
    width: 200px;
}

#filters {
    border: 1px solid #ccc;
}

#help h1 {
    margin-left: 8.8em;
}

#help #main {
    padding-left: 1em;
    width: 730px;
}

#help #main h2 {
    font-weight: bold;
    margin-top: 0.7em;
}

#help #main div {
    font-size: 13px;
}

#help #main div.about {
    float: left;
    width: 450px;
}

#help #main img.about {
    border: 1px dashed #ddd;
    float: right;
    height: 100px;
    margin: 1em;
    width: 200px;
}

#help #main hr {
    clear: both;
    color: #eee;
}

#help #nav {
    font-size: 0.75em;
}

#help #nav li {
    margin: 1em 0 1.5em 1em;
}

#help #nav li p {
    color: #666;
}

#help #start {
    float: left;
    width: 450px;
}

#help #start-video {
    float: right;
    padding: 1em 1em 0 0;
}

#help #next {
    clear: both;
}

#help #subway p {
    text-align: left;
}

#help #video-topics {
    padding: 0 0 1em 0;
}

#help .clip {
    margin-bottom: 2em;
}

#more_filters {
    border-bottom: 1px solid #ccc;
    font-size: 0.65em;
    line-height: 1.4em;
    margin: 0;
    padding: 1em;
}

#more_filters label {
    display: block;
}

#filters ul {
    font-size: 0.75em;
}

#filters li {
    padding: 0.5em;
    border-bottom: 1px dashed #ccc;
}

#filters li:nth-last-child(1) {
    border-bottom: 0px;
}

#filters li a {
    margin-right: 0.5em;
    color: #00e;
}

#filters .loading {
    margin: 1em;
}

#head, #foot, #plants {
    border: 1px dashed #ddd;
    color: #ddd;
    font-size: 0.65em;
    margin: 0 0 1em;
    padding: 1em 0;
    text-align: center;
}
#head {
    font-size: 9px;
    margin: 0 0 10px;
    padding: 10px 0;
}

#search-suggest input {
    width: 300px;
}
#search-suggest input, #search-suggest ul {
    font-family: "Lucida Sans Typewriter", "Lucida Console", monospace;
    font-size: 16px;
}
#search-suggest button {
    font-size: 14px;
}
#search-suggest div {
    background: #fff;
    border: 1px solid #ccc;
    border-bottom-color: #999;
    border-right-color: #999;
    left: 319px;
    margin: 0 auto;
    position: absolute;
    text-align: left;
    top: 71px;
    width: 303px;
    z-index: 1;
}
#search-suggest li {
    padding: 3px 4px;
}
#search-suggest li.highlighted {
    background-color: #abd6ff;
    color: #000;
}
#search-suggest li:hover {
    background-color: #c4e2ff;
    color: #000;
}
#search-suggest a {
    color: #000;
    cursor: default;
    text-decoration: none;
}

#navlinks p {
    color: #ccc;
    font-size: 0.9em;
    margin: 0;
    padding: 0;
}
#navlinks p a.current {
    color: #000;
}

#help-nav {
    float: left;
    margin-top: 1.4em;
}

#filter-working, #pick-filters, #plants {
    clear: left;
}

#filter-working, #pick-filters {
    border: 1px dashed #ddd;
    display: none;
    height: 180px;
    padding: 1em;
}

#filter-working .close, #pick-filters .close {
    color: #00e;
    cursor: pointer;
    display: inline;
    float: right;
}

#filter-working h3.name, #pick-filters h3.name {
    font-size: 1em;
    font-weight: bold;
    text-align: center;
}

#filter-working .info .info-sub {
    float: left;
    border: 1px dashed #ddd;
    padding: 0.5em;
    margin-right: 1em;
}

#filter-working .info .info-sub h3 {
    font-weight: bold;
}

#filter-working .values {
    float: left;
    font-size: 0.85em;
    padding: 1em 0 0;
    width: 250px;
}

#filter-working .values label {
    display: block;
    line-height: 1.2em;
}

#filter-working .values input {
    margin: 0.6em 0;
}

#filter-working .values input.zero ~ span {
    color: #ccc;
}

#filter-working .info {
    float: left;
    font-size: 0.85em;
    padding: 1em;
    width: 410px;
}

#filter-working .info p {
    padding: 2em 0;
}

/* Make the Dijit horizontal slider look like a ruler */

#filter-working .dijitSliderH {
    margin-top: 48px;
    margin-bottom: 18px;
}
#filter-working .dijitSliderButtonContainerH {
    padding: 0;
}

#filter-working .dijitSliderBumperH {
    width: 0px;  /* hmm, not quite right - still 1px off on left - hmm */
}

#filter-working .dijitSliderDecoration {
    background-color: #fe8;
    border-bottom: 1px solid black;
}
#filter-working .dijitSliderImageHandleH > div {
    font-size: 0.88em;
}
#filter-working .dijitSliderImageHandleH div.second_handle {
    /* A second handle at the bottom of the ruler, against the inches */
    position: absolute;
    height: 16px;
    width: 18px;
    background-image: url("http://ajax.googleapis.com/ajax/libs/dojo/1.5/dijit/themes/claro/form/images/sliderThumbs.png");
    background-position: -108px 0;
}
#filter-working .dijitSliderImageHandleH div.metric_display {
    position: absolute;
    bottom: 18px;
    right: -18px;
    text-align: center;
}
#filter-working .dijitSliderImageHandleH div.english_display {
    position: absolute;
    top: 20px;
    right: -18px;
    text-align: right;
}
#filter-working .dijitRuleLabelH {
    left: -100%;  /* print lengths left of ticks */
    text-align: right;
}

/* --- */

form#results-display {
    font-size: 0.7em;
}

form#results-display label {
    margin-left: 1em;
}

#plants {
    height: 350px;
    overflow: auto;
}

#plants .species_count {
    font-size: 2em;
    font-weight: bold;
}
#plants .species_count .count {
    color: black;
}
/* ... */

